when iam click detail page detail page show

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -6,6 +6,7 @@
             <li class="main-header__item">
                 <a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a>
             </li>
+            <!-- ////////////////////// path:/products -->
             <li class="main-header__item">
                 <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
             </li>
