--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -7,6 +7,7 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
+        <!-- /////////////////////////////////////////post -->
         <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
