--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,8 +22,12 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
-                        </div>
+                            <!-- //////////// -->
+
+<%- include("../includes/add-cart.ejs", {product:product}) %>
+
+
+                                                  </div>
                     </article>
                 <% } %>
             </div>
