--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -11,7 +11,7 @@
             </div>
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
-            <form action="/cart" method="post"  >
-                <button class="btn" type="submit">Add to cart </button>
-        </main>
+            <!-- //////// -->
+            <%- include("../includes/add-cart.ejs") %>
+
         <%- include('../includes/end.ejs') %>
