--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -24,14 +24,14 @@
                                     </h2>
                                     <p class="product__description">
                                         <%= product.description %>
-                                    </p>
+                                    </p> 
                                 </div>
                                 <div class="card__actions">
                                     <!-- ////////////////////////////////// -->
                                     <a href="/products/<%= product.id %>" class="btn">Detail</a>
-                                    <form action="/add-to-cart" method="POST">
-                                        <button class="btn">Add to Cart</button>
-                                    </form>
+                                    <!-- /////// -->
+                                    <%- include("../includes/add-cart.ejs", {product:product}) %>
+
                                 </div>
                             </article>
                             <% } %>
