--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -24,14 +24,11 @@
                                     </h2>
                                     <p class="product__description">
                                         <%= product.description %>
-                                    </p> 
+                                    </p>
                                 </div>
                                 <div class="card__actions">
-                                    <!-- ////////////////////////////////// -->
-                                    <a href="/products/<%= product.id %>" class="btn">Detail</a>
-                                    <!-- /////// -->
-                                    <%- include("../includes/add-cart.ejs", {product:product}) %>
-
+                                    <a href="/products/<%= product.id %>" class="btn">Details</a>
+                                    <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                                 </div>
                             </article>
                             <% } %>
