--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -30,6 +30,7 @@
                                     <!-- /////// when i am click edite b button redire add productpage with editw item-->
                                     <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
+                                        <input type="hidden" value="<%= product.id%>" name="productId">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
 
